k8s/spaceryder/spaceryder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: spaceryder
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: spaceryder
    template:
        metadata:
            labels:
                app: spaceryder
        spec:
            containers:
                - name: spaceryder
                  image: spaceryder_be:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
                  resources:
                      limits:
                          cpu: '500m'
                          memory: '512Mi'
                      requests:
                          cpu: '200m'
                          memory: '256Mi'
