k8s/spaceryder/spaceryder-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: spaceryder-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
        nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
        nginx.ingress.kubernetes.io/websocket: 'true'
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: spaceryder-service
                            port:
                                number: 3000
